--- a/src/components/PostList/PostList.module.css
+++ b/src/components/PostList/PostList.module.css
@@ -1,11 +1,10 @@
-.postList {
-	margin-top: 3.125rem;
+.postListWrapper {
+	margin: 1.875rem 0 3.125rem 0;
 }
 
-.postListTitle {
-	margin-bottom: 1.25rem;
-	font-family: 'Lato';
+.postTitle {
 	font-weight: 900;
-	font-size: 46px;
+	font-size: 36px;
+	text-align: center;
 	color: #1e212c;
 }
