--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,16 +1,32 @@
-.button {
+.orange {
+	/* Button */
+	width: 217px;
 	padding: 20px 50px;
-	background: linear-gradient(55.95deg, #ff3f3a 0%, #f75e05 100%);
 	border-radius: 4px;
 	cursor: pointer;
 	border: none;
 	outline: none;
-	width: 215px;
+	background: linear-gradient(55.95deg, #ff3f3a 0%, #f75e05 100%);
+
+	/* Text */
+	color: #fff;
+	font-weight: 700;
+	font-size: 16px;
+	letter-spacing: 0.5px;
+	text-align: center;
+}
+
+.white {
+	width: 126px;
+	height: 44px;
+	border-radius: 4px;
+	background: #fff;
+	border: 1px solid #ff3f3a;
+	cursor: pointer;
 
 	/* Text */
 	font-weight: 700;
-	font-size: 16px;
-	text-align: center;
+	font-size: 14px;
+	color: #ff3f3a;
 	letter-spacing: 0.5px;
-	color: #ffffff;
 }
