--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -1,15 +1,20 @@
 .input {
-	background: #ffffff;
 	border: 1px solid #d7dadd;
 	border-radius: 4px;
+	background: #fff;
 	padding: 18px 0 18px 16px;
+	outline: none;
 	font-weight: 600;
 	font-size: 18px;
-	color: #1e1e1e;
+	transition: all 0.3s;
 }
 
 .input::placeholder {
 	font-weight: 400;
 	font-size: 16px;
 	color: #9a9ca5;
+}
+
+.input:focus {
+	border: 1px solid #f75e05;
 }
