--- a/src/style/App.css
+++ b/src/style/App.css
@@ -15,9 +15,18 @@ body {
 	margin: 0 auto;
 }
 
+.filterComponent {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+
 .modalWrapper {
 	position: relative;
 	display: none;
+	height: 100vh;
+	width: 100%;
+	background: rgb(56, 55, 55);
 }
 
 .activeModal {
@@ -25,6 +34,7 @@ body {
 }
 
 .modal {
+	background: #ff3f3a;
 	position: absolute;
 	max-width: 500px;
 	top: 200px;
@@ -32,5 +42,34 @@ body {
 	border: 1px solid #ff3f3a;
 	padding: 50px;
 	border-radius: 16px;
-	background: #ff3f3a;
+}
+
+.loadingSpinnerContainer {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 5000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.loadingSpinner {
+	width: 64px;
+	height: 64px;
+	border: 8px solid;
+	border-color: #ff3f3a transparent #ff3f3a transparent;
+	border-radius: 50%;
+	animation: spin 1.2s linear infinite;
+}
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
